--- a/style.css
+++ b/style.css
@@ -1,30 +1,97 @@
+html {
+    margin: 0;
+}
+body {
+    margin: 0;
+}
+
+h2, h2 + p {
+    display: flex;
+    justify-content: center;
+}
+
 .one {
-    display: inline-flex;
+    display: inline-block;
     width: 200px;
     height: 200px;
     border: 2px solid black;
     margin: 10px;
+    position: relative;
+}
+
+.two {
+    width: 100px;
+    height: 50px;
+    background-color: #ec0223;
+    border: 2px solid white;
+}
+
+.three, .four, .five, .six {
+    position: relative;
+}
+
+.three {
+    width: 130px;
+    height: 90px;
+    background-color: black;
+    border: 2px solid white;
+    margin: 35px 5px;
+}
+
+.four {
+    width: 80px;
+    height: 150px;
+    background-color: deeppink;
+    border: 2px solid white;
+    margin: 3px 15px 10px 7px;
+}
+
+.five {
+    width: 200px;
+    height: 100px;
+    background-color: blue;
+    border: 2px solid white;
+    margin: 20px;
+}
+
+.six {
+    width: 80px;
+    height: 50px;
+    background-color: red;
+    z-index: 1;
+    border: 2px solid white;
+    margin: 3px 15px 10px 7px;
 }
 
 #overlay_block {
     position: absolute;
     display: none;
-    background-color: yellow;
+    background-color: blue;
     opacity: 0.3;
+    z-index: 10000;
 }
-.visible {
-    display: flex !important;
-}
-.hide {
-    display: none !important;
-}
+
 #overlay_info {
     position: absolute;
     display: none;
     justify-content: center;
     margin: 0;
     background-color: white;
+    z-index: 10001;
 }
+
+.visible {
+    display: flex !important;
+}
+
+.hide {
+    display: none !important;
+}
+
 #overlay_info p {
-    margin:0;
+    margin: 0;
+}
+
+.hint {
+    background-color: black;
 }
